--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,89 @@
     <artifactId>liquibase</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <packaging>jar</packaging>
+
+    <name>Liquibase-app</name>
+
+    <description>Demo project for Spring Boot</description>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.9.RELEASE</version>
+        <relativePath/>  <!-- lookup parent from repository -->
+    </parent>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
+        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
+
+        <liquibase.propertyFile>${project.basedir}/liquibase.properties</liquibase.propertyFile>
+    </properties>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.11</version>
+        </dependency>
+
+    </dependencies>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+
+<!--                <plugin>-->
+<!--                    <groupId>org.liquibase</groupId>-->
+<!--                    <artifactId>liquibase-maven-plugin</artifactId>-->
+<!--                    <version>4.0.0</version>-->
+<!--                    <configuration>-->
+<!--                        <changeLogFile>liquibase/changesets.xml</changeLogFile>-->
+<!--                        <changelogSchemaName>liquibase</changelogSchemaName>-->
+<!--                        <outputDefaultSchema>true</outputDefaultSchema>-->
+<!--                        <logging>debug</logging>-->
+<!--                        <driver>org.postgresql.Driver</driver>-->
+<!--                        <url>${postgresdb.url.properties}</url>-->
+<!--                        <username>${postgresdb.user.properties}</username>-->
+<!--                        <password>${postgresdb.password.properties}</password>-->
+<!--                        <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>-->
+<!--                    </configuration>-->
+<!--                    <dependencies>-->
+<!--                        <dependency>-->
+<!--                            <groupId>org.hibernate</groupId>-->
+<!--                            <artifactId>hibernate-core</artifactId>-->
+<!--                            <version>5.4.6.Final</version>-->
+<!--                        </dependency>-->
+<!--                        <dependency>-->
+<!--                            <groupId>javax.xml.bind</groupId>-->
+<!--                            <artifactId>jaxb-api</artifactId>-->
+<!--                            <version>2.4.0-b180830.0359</version>-->
+<!--                        </dependency>-->
+<!--                    </dependencies>-->
+<!--                </plugin>-->
+
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                </plugin>
+
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
